// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropAnchors snapshots should render DropAnchors 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render some prompt when grid for bottom 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts Prompts--bottom"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--left"
      data-test-anchor="left"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--right"
      data-test-anchor="right"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render some prompt when grid for left 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--left"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--left"
      data-test-anchor="left"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--right"
      data-test-anchor="right"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render some prompt when grid for right 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--right"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--left"
      data-test-anchor="left"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--right"
      data-test-anchor="right"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render some prompt when grid for top 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--top"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--left"
      data-test-anchor="left"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--right"
      data-test-anchor="right"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render with next prompt for bottom 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts Prompts--bottom"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render with next prompt for right 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--right"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--left"
      data-test-anchor="left"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--right"
      data-test-anchor="right"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render with prev prompt for left 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--left"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--left"
      data-test-anchor="left"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--right"
      data-test-anchor="right"
    />
  </div>
</DocumentFragment>
`;

exports[`DropAnchors snapshots should render with prev prompt for top 1`] = `
<DocumentFragment>
  <div
    class="css-hnxq09"
    data-test-box=""
  >
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts"
      data-test-box=""
    />
    <div
      class="css-9ljzna Prompts Prompts--top"
      data-test-box=""
    />
    <div
      class="css-1xpffs9 Anchors Anchors--bottom"
      data-test-anchor="bottom"
    />
    <div
      class="css-1xpffs9 Anchors Anchors--top"
      data-test-anchor="top"
    />
  </div>
</DocumentFragment>
`;
